--- a/main_js.html
+++ b/main_js.html
@@ -7,6 +7,7 @@
   const INPUT_LIST = "input_list";
   const ADD_MANIP_BUTTON = "add_manip_button";
   const ERROR = "error";
+  const SUBMIT_BUTTON = "submit_button";
 
   // HTML Elements //
   const manipSelector = document.getElementById(SELECT_MANIP);
@@ -14,6 +15,7 @@
   const inputList = document.getElementById(INPUT_LIST);
   const addManipButton = document.getElementById(ADD_MANIP_BUTTON);
   const errorSpan = document.getElementById(ERROR);
+  const submitButton = document.getElementById(SUBMIT_BUTTON);
 
   /**
    * @class
@@ -53,6 +55,12 @@
        * object of manip which got an input
        */
       this.inputObject = {};
+
+      /**
+       * @type {string}
+       * value of the selected user
+       */
+      this.selectedUserValue = "";
 
       // Initialize the form by filling the manip selector and the user selector
       Promise.all([this.buildManipSelector(), this.buildUserSelector()])
@@ -127,6 +135,7 @@
             .then((newInputLi) => {
               inputList.appendChild(newInputLi);
               this.inputObject[manip.name] = 0;
+              setSubmitButtonState(true);
               this.buildManipSelector().then((data) => {
                 if (
                   Object.keys(this.inputObject).length !==
@@ -149,13 +158,16 @@
      * @return {Promise}
      */
     deleteInput(inputLiElement) {
-      const manipName = inputLiElement.id;
+      const manipName = inputLiElement.id.slice(3);
       return new Promise((resolve, reject) => {
         if (this.inputObject[manipName] !== undefined) {
           delete this.inputObject[manipName];
           inputLiElement.remove();
           this.buildManipSelector()
             .then(() => {
+              if (mainForm.isFormReadyToSubmit()) {
+                setSubmitButtonState(false);
+              }
               setManipSelectoreState(false);
               resolve("Input deleted");
             })
@@ -165,6 +177,27 @@
         }
       });
     }
+
+    /**
+     * isFormReadyToSubmit method.
+     * @return {boolean}
+     */
+    isFormReadyToSubmit() {
+      let isReady = true;
+      if (
+        mainForm.selectedUserValue &&
+        Object.keys(mainForm.inputObject).length
+      ) {
+        for (const amount of Object.values(mainForm.inputObject)) {
+          if (!amount) {
+            isReady = false;
+          }
+        }
+      } else {
+        isReady = false;
+      }
+      return isReady;
+    }
   }
 
   /**
@@ -173,10 +206,9 @@
    */
   const onError = (error) => {
     console.log("Got an error :");
-    console.log(error.message);
     console.error(error);
     errorSpan.innerHTML = error.message;
-    errorSpan.style.display = null;
+    errorSpan.style.display = "block";
   };
 
   /**
@@ -213,6 +245,14 @@
   };
 
   /**
+   * setSubmitButtonState function
+   * @param {boolean} toDisabled
+   */
+  const setSubmitButtonState = (toDisabled) => {
+    submitButton.disabled = toDisabled ? true : false;
+  };
+
+  /**
    * getNewUserOption function
    * @param {object} user
    * @return {Element} an option element
@@ -246,12 +286,13 @@
     return new Promise((resolve, reject) => {
       // Creates the li parent element
       const newInputLi = document.createElement("li");
-      newInputLi.id = manipName;
+      newInputLi.id = "li_" + manipName;
       // title
       const title = document.createElement("h5");
       title.innerHTML = manipName;
       // input
       const input = document.createElement("input");
+      input.id = manipName;
       [
         "input",
         "keydown",
@@ -264,9 +305,10 @@
       ].forEach(function (event) {
         input.addEventListener(event, function () {
           if (!inputFilter(this.value)) {
-            this.value = this.oldValue;
+            this.value = mainForm.inputObject[this.id] = this.value;
           } else {
-            this.oldValue = this.value;
+            mainForm.inputObject[this.id] = this.value;
+            setSubmitButtonState(!mainForm.isFormReadyToSubmit());
           }
         });
       });
@@ -285,7 +327,7 @@
     });
   };
 
-  // Onclick event functions //
+  // Event functions //
 
   /**
    * deleteManip function
@@ -302,6 +344,16 @@
    */
   const addManipInput = () =>
     mainForm.addManipInput().then(onSuccess).catch(onError);
+
+  /**
+   * onChangeUser function
+   */
+  const onChangeUser = () => {
+    mainForm.selectedUserValue = userSelector.value;
+    if (mainForm.isFormReadyToSubmit()) {
+      setSubmitButtonState(false);
+    }
+  };
 
   /**
    * onSubmit function
