--- a/main_form.html
+++ b/main_form.html
@@ -47,6 +47,13 @@
     }
     .deleteButton {
       min-width: 0px;
+      margin-left: 0;
+    }
+    .manipName {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      overflow-x: hidden;
     }
   </style>
   <head>
