--- a/main_form.html
+++ b/main_form.html
@@ -9,9 +9,11 @@
       height: 100%;
       display: flex;
       flex-direction: column;
+      padding-left: 1rem;
+      padding-right: 1rem;
     }
-    div {
-      margin: 0px 10px 0px 10px;
+    h4 {
+      margin: 0;
     }
     ul {
       list-style-type: none;
@@ -22,11 +24,10 @@
     }
     #error {
       display: none;
-      min-height: 29px;
       line-height: 27px;
       margin: 5px 10px 5px 10px;
       color: #fff;
-      background-color: #ff0000;
+      background-color: #e96767;
       border: 1px solid #ff0000;
       border-radius: 2px;
       box-shadow: none;
@@ -47,37 +48,38 @@
     }
     .deleteButton {
       min-width: 0px;
+      margin-left: 0;
+    }
+    .manipName {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      overflow-x: hidden;
     }
   </style>
   <head>
     <base target="_top" />
   </head>
-
   <body>
-    <div class="block form-group">
-      <h3>Add a manip</h3>
+    <div>
+      <h4>Add a manip</h4>
       <select id="select_manip" disabled></select>
       <button id="add_manip_button" onclick="addManipInput()" disabled>
         Add this manip
       </button>
     </div>
-
-    <div class="block form-group">
-      <h3>Select a gadz</h3>
+    <div>
+      <h4>Select a gadz</h4>
       <select id="select_user" onchange="onChangeUser()" disabled>
         <option value="" selected="selected" disabled>Choose here</option>
       </select>
     </div>
-
-    <div class="block form-group">
-      <h3>Manip input</h3>
-      <ul id="input_list" class="block form-group"></ul>
+    <div>
+      <h4>Manip input</h4>
+      <ul id="input_list"></ul>
     </div>
-
     <button id="submit_button" class="action" disabled>Bucquez</button>
-
     <span id="error" onclick="dismissError()">Error</span>
-
     <a
       id="issue_link"
       target="blank"
