--- a/main_form.html
+++ b/main_form.html
@@ -78,7 +78,9 @@
       <h4>Manip input</h4>
       <ul id="input_list"></ul>
     </div>
-    <button id="submit_button" class="action" disabled>Bucquez</button>
+    <button id="submit_button" class="action" onclick="onSubmit()" disabled>
+      Bucquez
+    </button>
     <span id="error" onclick="dismissError()">Error</span>
     <a
       id="issue_link"
