--- a/main_js.html
+++ b/main_js.html
@@ -1,11 +1,18 @@
 <li id="input_template" style="display: none">
   <div class="manipName">
-    <button class="deleteButton">x</button>
+    <button class="deleteButton" onclick="deleteManip()">x</button>
     <h5>Manip Name</h5>
   </div>
-  <input type="text" placeholder="moyen" />
+  <select>
+    <option value="" disabled selected style="display: block">
+      -Choose an option-
+    </option>
+    <option>Virement</option>
+    <option>Chèque</option>
+    <option>Espèces</option>
+  </select>
   <input type="date" />
-  <input type="text" placeholder="123€" />
+  <input type="number" placeholder="123" />
 </li>
 
 <script>
@@ -46,13 +53,9 @@
        * user parameters :
        * lastName
        * firstName
-       * number
+       * nickName
        */
-      this.userArray = userArray.map((user) => ({
-        ...user,
-        id: user.nickName + "_" + user.number,
-      }));
-
+      this.userArray = userArray;
       /**
        * @type {object[]}
        * Array of selectable manip
@@ -61,13 +64,11 @@
        * name
        */
       this.manipArray = manipArray;
-
       /**
        * @type {object}
        * object of manip which got an input
        */
       this.inputObject = {};
-
       /**
        * @type {string}
        * value of the selected user
@@ -101,7 +102,9 @@
 
           for (let manip of this.manipArray) {
             if (this.inputObject[manip.name] === undefined) {
-              manipSelector.appendChild(getNewManipOption(manip.name));
+              manipSelector.appendChild(
+                new Option(manip.name, manip.name, false, false)
+              );
             }
           }
 
@@ -120,7 +123,17 @@
     buildUserSelector() {
       return new Promise((resolve, reject) => {
         for (let user of this.userArray) {
-          userSelector.appendChild(getNewUserOption(user));
+          userSelector.appendChild(
+            new Option(
+              `${upperFirstLetter(user.firstName)} ${upperFirstLetter(
+                user.lastName
+              )}`,
+
+              user.nickName,
+              false,
+              false
+            )
+          );
         }
         resolve("user selector building successfull");
       });
@@ -181,7 +194,7 @@
           inputLiElement.remove();
           this.buildManipSelector()
             .then(() => {
-              if (mainForm.isFormReadyToSubmit()) {
+              if (this.isFormReadyToSubmit()) {
                 setSubmitButtonState(false);
               }
               setManipSelectoreState(false);
@@ -200,12 +213,9 @@
      */
     isFormReadyToSubmit() {
       let isReady = true;
-      if (
-        mainForm.selectedUserValue &&
-        Object.keys(mainForm.inputObject).length
-      ) {
+      if (this.selectedUserValue && Object.keys(this.inputObject).length) {
         let input;
-        for (input of Object.values(mainForm.inputObject)) {
+        for (input of Object.values(this.inputObject)) {
           if (!input.option || !input.date || !input.amount) {
             isReady = false;
             break;
@@ -216,6 +226,18 @@
       }
       return isReady;
     }
+
+    /**
+     * onFormSubmit method.
+     */
+    onFormSubmit() {
+      return new Promise((resolve, reject) =>
+        google.script.run
+          .withSuccessHandler(resolve)
+          .withFailureHandler(reject)
+          .onSubmit(this.selectedUserValue, this.inputObject)
+      );
+    }
   }
 
   /**
@@ -223,7 +245,6 @@
    * @param {object} error
    */
   const onError = (error) => {
-    console.log("Got an error :");
     console.error(error);
     errorSpan.innerHTML = error.message;
     errorSpan.style.display = "block";
@@ -271,28 +292,6 @@
   };
 
   /**
-   * getNewUserOption function
-   * @param {object} user
-   * @return {Element} an option element
-   */
-  const getNewUserOption = (user) =>
-    new Option(
-      upperFirstLetter(user.firstName) + " " + upperFirstLetter(user.lastName),
-      user.id,
-      false,
-      false
-    );
-
-  /**
-   * getNewManipOption function
-   * @param {string} manipName
-   * @param {boolean} selected
-   * @return {Element} an option element
-   */
-  const getNewManipOption = (manipName) =>
-    new Option(manipName, manipName, false, false);
-
-  /**
    * getNewInput function
    * Creates and returns a li element
    * The element contains an input which only accept numbers
@@ -306,18 +305,21 @@
       const childrenList = newInputLi.children;
       // Sets the id
       newInputLi.id = "li_" + manipName;
+      // Sets the delete onclick function
+      childrenList[0].children[0].onclick = deleteManip;
       // Sets title
       childrenList[0].children[1].innerHTML = manipName;
-      // Set input ids
-      //childrenList[1].id = "option_" + manipName;
+
       childrenList[1].addEventListener("input", function () {
         mainForm.inputObject[manipName].option = this.value;
+        setSubmitButtonState(!mainForm.isFormReadyToSubmit());
       });
-      //childrenList[2].id = "date_" + manipName;
+
       childrenList[2].addEventListener("input", function () {
         mainForm.inputObject[manipName].date = this.value;
+        setSubmitButtonState(!mainForm.isFormReadyToSubmit());
       });
-      //childrenList[3].id = "amount_" + manipName;
+
       childrenList[3].addEventListener("input", function () {
         if (!inputFilter(this.value)) {
           this.value = mainForm.inputObject[manipName].amount;
@@ -327,7 +329,7 @@
         }
       });
 
-      newInputLi.style = "";
+      newInputLi.style = null;
       resolve(newInputLi);
     });
   };
@@ -340,7 +342,7 @@
    */
   const deleteManip = (event) =>
     mainForm
-      .deleteInput(event.originalTarget.parentNode)
+      .deleteInput(event.originalTarget.parentNode.parentNode)
       .then(onSuccess)
       .catch(onError);
 
@@ -363,7 +365,18 @@
   /**
    * onSubmit function
    */
-  const onSubmit = () => mainForm.onSubmit().then(onSuccess).catch(onError);
+  const onSubmit = () => {
+    setManipSelectoreState(true);
+    setUserSelectoreState(true);
+    setSubmitButtonState(true);
+    mainForm
+      .onFormSubmit()
+      .then((response) => {
+        console.log(response);
+        setTimeout(() => google.script.host.close(), 1000 * 4);
+      })
+      .catch(onError);
+  };
 
   // utils function //
   /**
